registrattion, login & logout enabled

--- a/app/views/layouts/_signed_out.erb
+++ b/app/views/layouts/_signed_out.erb
@@ -3,13 +3,25 @@
 
 <section class="clearfix">
   <article class="one_third reg_form">
-    <form action="/register/" method="post">
-      <!--<label for="username">Username:</label><br>-->
-      <input name="username" id="username" type="text" autofocus placeholder="Username"><br><br>
-      <!--<label for="password">Password:</label><br>-->
-      <input name="password" id="password" type="password" placeholder="Password"><br><br>
-      <button type="submit">Register</button>
-    </form>
+
+    <%= form_for User.new, url: register_path, html: { class: "register-form" } do |f| %>
+      <% f.object.errors.full_messages.each do |error| %>
+        <div class="errors">
+          <%= error %>
+        </div>
+      <% end %>
+      <div>
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+      <div>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </div>
+      <div>
+        <%= f.submit "Register" %>
+      </div>
+    <% end %>
   </article>
 </section>
 <section class="clearfix">
