added 78 images to database, changed logged-in index page to show images from DB

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,19 @@
+<% if session[:user_id] %>
+  <section class="clearfix">
+    <article class="full_column">
+        <h1>Recent</h1>
+        <% @photos.each do |image| %>
+          <div class="image one_fourth">
+            <%= image_tag "#{image.url}" %>
+            <p><%= image.title %></p>
+            <% if image.keywords != "{}" %>
+              <p><%= image.keywords %></p>
+            <% end %>
+          </div>
+        <% end %>
+    </article>
+  </section>
+<% else %>
 <section class="clearfix">
   <article class="one_third centergif">
     <img class="gif" src="http://lukemccomb.com/images/box5A.gif">
@@ -11,7 +27,7 @@
     </form>
   </article>
 </section>
-
+<% end %>
 
 
 
