--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -543,3 +543,18 @@ div.wrapper h1 {
 .about hr {
     width: 75%;
 }
+
+.image img {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.image {
+    float: left;
+    display: inline-block;
+    padding: 1%;
+}
+
+.img p {
+    font-size: 100%;
+}
