--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -546,13 +546,15 @@ div.wrapper h1 {
 
 .image img {
     width: 100%;
-    margin: 0 auto;
 }
 
 .image {
     float: left;
     display: inline-block;
-    padding: 1%;
+    padding-right: 1%;
+    padding-left: 1%;
+    margin: 0 auto;
+
 }
 
 .img p {
