--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
 <header class="site_header clearfix">
   <nav>
-    <p><%= image_tag "menu.png", class: 'menu_logo' %></p>
-    <p class="question_logo">?</p>
+    <%= image_tag "menu.png", class: 'menu_logo' %>
   </nav>
   <a href="/"><%= image_tag "lg1Lessbright.png", class: 'site_logo' %></a>
   <% if current_user %>
@@ -20,6 +20,7 @@
     <%= render partial: "layouts/signed_out" %>
   <% end %>
 </header>
+
 <% if flash[:register_notice] %>
   <p class="flash"><%= flash[:register_notice] %></p>
 <% end %>
@@ -29,30 +30,23 @@
 <% if flash[:login_fail] %>
   <p class="flash"><%= flash[:login_fail] %></p>
 <% end %>
+
 <ul class="one_third nav_menu clearfix">
   <a href="/search"><li>SEARCH</li></a>
   <a href="/collections"><li>COLLECTIONS</li></a>
   <a href="/cart"><li>CART</li></a>
 </ul>
-<section class="clearfix">
-  <article class="one_third about">
-    <p>
-      Lukefolio will soon be searchable database of my images.<br><hr>
-    I'm <a class="bluelink" target="_blank" href="https://twitter.com/lukemccomb" >Luke McComb</a> and I'm learning how to build web applications at <a target="_blank" href="http://www.galvanize.it/school/#main">gSchool</a>.<br><hr>
-    My photography can be seen <a class="pinklink" href="http://lukemccomb.com" target="_blank">here</a> and will soon be available on Lukefolio.<br><hr>
-    </p>
-  </article>
-</section>
 <div class="wrapper">
   <%= yield %>
-  <footer class="one_third social_foot">
-    <a href="https://twitter.com/lukemccomb" target="_blank"><%= image_tag "twitterlogo.png", class: 'social' %></a>
-    <a href="https://github.com/lukemccomb" target="_blank"><%= image_tag "githublogo.png", class: 'social' %></a>
-    <a href="http://www.galvanize.it/school/#main" target="_blank"><%= image_tag "galvanizelogo.png", class: 'social' %></a>
-    <a href="http://lukemcblog.com/" target="_blank"><%= image_tag "tumblrlogo.png", class: 'social' %></a>
-    <a href="http://instagram.com/mcluukin" target="_blank"><%= image_tag "instalogo.png", class: 'social' %></a>
-    <a href="http://soundcloud.com/luukin/" target="_blank"><%= image_tag "soundcloudlogo.png", class: 'social' %></a>
-    <a href="http://hypem.com/luukin" target="_blank"><%= image_tag "hypelogo.png", class: 'social' %></a>
+  <div id="footer-cue">&#10140</div>
+  <footer class="footer one_third">
+    <a href="https://twitter.com/lukemccomb" target="_blank"><%= image_tag "twitterlogo.png", class: 'social' %></a><br/><br/>
+    <a href="https://github.com/lukemccomb" target="_blank"><%= image_tag "githublogo.png", class: 'social' %></a><br/><br/>
+    <a href="http://www.galvanize.it/school/#main" target="_blank"><%= image_tag "galvanizelogo.png", class: 'social' %></a><br/><br/>
+    <a href="http://lukemcblog.com/" target="_blank"><%= image_tag "tumblrlogo.png", class: 'social' %></a><br/><br/>
+    <a href="http://instagram.com/mcluukin" target="_blank"><%= image_tag "instalogo.png", class: 'social' %></a><br/><br/>
+    <a href="http://soundcloud.com/luukin/" target="_blank"><%= image_tag "soundcloudlogo.png", class: 'social' %></a><br/><br/>
+    <a href="http://hypem.com/luukin" target="_blank"><%= image_tag "hypelogo.png", class: 'social' %></a><br/><br/>
   </footer>
 </div>
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
