--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,22 +1,14 @@
 <% if session[:user_id] %>
-  <section class="clearfix">
-        <h1>Recent</h1>
-        <% @photos.each do |image| %>
-          <article class="image one_fourth">
-            <%= link_to image_tag("#{image.url}"), "http://lukemccomb.com" %>
-            <p><%= image.title %></p>
-            <% if image.keywords != "{}" %>
-              <p><%= image.keywords %></p>
-            <% end %>
-          </article>
+<section class="clearfix thumbgallery full_column">
+  <% @photos.each do |image| %>
+    <article class="image one_fourth">
+      <a href="/images/<%= image.id %>" class="single-image">
+        <img src="<%= image.url %>"/>
+      </a>
+    </article>
   <% end %>
-  </section>
-<% else %>
-<section class="clearfix">
-  <article class="one_third centergif">
-    <img class="gif" src="http://lukemccomb.com/images/box5A.gif">
-  </article>
 </section>
+<% else %>
 <section class="clearfix">
   <article class="full_column srchLukefolio">
     <h1>LUKEFOLIO</h1>
@@ -26,6 +18,3 @@
   </article>
 </section>
 <% end %>
-
-
-
