--- a/app/views/layouts/_signed_out.erb
+++ b/app/views/layouts/_signed_out.erb
@@ -17,7 +17,7 @@
         <%= f.password_field :password %>
       </div>
       <div>
-        <%= f.submit "Register" %>
+        <%= f.submit "Register", class: 'reg-btn' %>
       </div>
     <% end %>
   </article>
@@ -39,7 +39,7 @@
         <%= f.password_field :password %>
       </div>
       <div>
-        <%= f.submit "Login" %>
+        <%= f.submit "Login", class: 'login-btn' %>
       </div>
     <% end %>
   </article>
