--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,11 +10,9 @@
 </section>
 <% else %>
 <section class="clearfix">
-  <article class="full_column srchLukefolio">
-    <h1>LUKEFOLIO</h1>
-    <form class="full_column search_input">
-      <input type="text" id="searchinput" placeholder="Search!" autocomplete="off" autofocus>
-    </form>
+  <article class="full_column">
+    <h1>Luke McComb</h1>
+    <p>Register with your email or log in as user@example.com / Password: password</p>
   </article>
 </section>
 <% end %>
