--- a/app/assets/stylesheets/module/_images.css.scss
+++ b/app/assets/stylesheets/module/_images.css.scss
@@ -16,6 +16,10 @@
   margin: .5% auto;
 }
 
+.image:hover {
+  @include animation(scale 1.0s ease-in, slide 2.0s ease);
+}
+
 .centergif {
   margin-top: 40px;
   margin-left: 38.7%;
@@ -37,24 +41,23 @@
     display: block;
     margin: 0 auto;
     width: auto;
-    box-shadow: 3px 3px 3px black;
-
+    box-shadow: 3px 3px 3px white, -3px -3px 3px white;
   }
   p {
     text-align: center;
   }
   .comment {
-    font-size: 80%;
+    font-size: 90%;
   }
   .comment-created {
-    font-size: 70%;
-    color: whitesmoke;
+    font-size: 80%;
+    color: #119ac4;
   }
   hr {
     width: 20%;
   }
   .comment-card {
-    color: #029506;
+    color: #ffffff;
     background-color: rgba(255, 255, 255, 0.2);
     width: 30%;
     display: block;
