tempoary css fix on thumbnail sizes on main layout

--- a/app/assets/stylesheets/module/_layout.css.scss
+++ b/app/assets/stylesheets/module/_layout.css.scss
@@ -24,7 +24,7 @@ body {
 
 .site_header {
   width: auto;
-  background-image: -webkit-gradient(linear, right top, left top, from(#119ac4), to(#000000));
+  background-image: -webkit-gradient(linear, right top, left top, from(#00b8ff), to(#000000));
   min-height: 50px;
   height: 05.8888889%;
   padding: 0 12px 0 12px;
