--- a/app/assets/stylesheets/module/_forms.css.scss
+++ b/app/assets/stylesheets/module/_forms.css.scss
@@ -2,6 +2,7 @@
   float: right;
   margin-right: 30px;
   margin-top: 20px;
+  margin-left: -6%;
   cursor:pointer;
   color: #ffffff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.60);
