added target:blank to blog link_to

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <%= link_to "Dashboard", user_path(current_user.id) %>
     <br/>
   <% end %>
-  <%= link_to "Blog", "http://lukemcblog.com" %><br/>
+  <%= link_to "Blog", "http://lukemcblog.com", :target => "_blank" %><br/>
   <%= link_to "Info", "/info" %><br/>
 </ul>
 <div class="wrapper">
