fixed JS footer show/hide function, working on elasticsearch functionality

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
  */
 
 @import "bourbon";
+@import "base/variables";
 @import "libs/normalize";
 @import "module/layout";
 @import "module/buttons";
@@ -11,4 +12,9 @@
 @import "module/images";
 @import "module/typography";
 
-
+//base-spacing
+//font-sizing
+//colors
+//look at other peoples styles and implimentation of variables
+//color operations
+//
