--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -11,7 +11,7 @@
 <% else %>
 <section class="clearfix">
   <article class="full_column">
-    <h1>Luke McComb</h1>
+    <h1 id="color-magic">Luke McComb</h1>
     <p>Register with your email or log in as user@example.com / Password: password</p>
   </article>
 </section>
