--- a/app/assets/stylesheets/libs/_normalize.css.scss
+++ b/app/assets/stylesheets/libs/_normalize.css.scss
@@ -360,8 +360,8 @@ input[type="search"] {
 }
 
 /**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
+ * Remove inner padding and searchs cancel button in Safari and Chrome on OS X.
+ * Safari (but not Chrome) clips the cancel button when the searchs input has
  * padding (and `textfield` appearance).
  */
 
