--- a/app/assets/stylesheets/module/_forms.css.scss
+++ b/app/assets/stylesheets/module/_forms.css.scss
@@ -81,7 +81,7 @@
   width: 100%;
 }
 
-#searchinput:focus {
+#search_term:focus {
   box-shadow: 5px 5px 5px rgba(255, 255, 255, 1.0),
   -5px 5px 5px rgba(255, 255, 255, 1.0),
   5px -5px 5px rgba(255, 255, 255, 1.0),
@@ -96,13 +96,10 @@
   border-radius: 5px;
 }
 
-#searchinput {
+#search_term {
   width: 50%;
   text-align: center;
-  left: 24.5%;
-  top: 80%;
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.10);
+  background-color: rgba(255, 255, 255, 0.90);
   font-size: 130%;
 }
 
