aligned add-keyword form

--- a/app/assets/stylesheets/module/_buttons.css.scss
+++ b/app/assets/stylesheets/module/_buttons.css.scss
@@ -91,3 +91,9 @@ button:hover {
 .comment-submit {
   margin-bottom: 2%;
 }
+
+.keyword-button {
+  background-color: red;
+  color: #ffffff;
+  width: 30%;
+}
