--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,10 @@
 <% if session[:user_id] %>
-  <%= form_for(:search, url: search_path, method: :get) do |form| %>
-    <%= form.text_field :term %>
-    <%= form.submit %>
-  <% end %>
+  <div class="search">
+    <%= form_for(:search, url: search_path, method: :get) do |form| %>
+      <%= form.text_field :term %>
+      <%= form.submit "Search", class: 'search-button' %>
+    <% end %>
+  </div>
 <section class="clearfix thumbgallery full_column">
   <% @photos.each do |image| %>
     <article class="image one_fourth">
