added thumbnail column to image table for thumbnail view on index

--- a/app/assets/stylesheets/module/_images.css.scss
+++ b/app/assets/stylesheets/module/_images.css.scss
@@ -66,3 +66,12 @@
     border-radius: 5px;
   }
 }
+
+.keywords {
+  list-style: none;
+  text-align: center;
+  font-weight: light;
+  li {
+    line-height: 180%;
+  }
+}
