--- a/app/assets/stylesheets/module/_typography.css.scss
+++ b/app/assets/stylesheets/module/_typography.css.scss
@@ -21,12 +21,12 @@
 }
 
 div.wrapper h3 {
-  color: #ffffff;
+  color: #00b8ff;
   letter-spacing: 2px;
   font-size: 100%;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.30);
   text-align: center;
-  font-weight: 100;
+  font-weight: 500;
   margin-right: auto;
   margin-left: auto;
   width: auto;
