user can edit their user info

--- a/app/assets/stylesheets/module/_buttons.css.scss
+++ b/app/assets/stylesheets/module/_buttons.css.scss
@@ -97,3 +97,10 @@ button:hover {
   color: #ffffff;
   width: 30%;
 }
+
+.user-update {
+  background-color: red;
+  color: #ffffff;
+  width: 20%;
+  margin-top: 2%;
+}
