--- a/app/assets/stylesheets/module/_images.css.scss
+++ b/app/assets/stylesheets/module/_images.css.scss
@@ -45,13 +45,14 @@
   }
   p {
     text-align: center;
+    color: #0022d1;
   }
   .comment {
     font-size: 90%;
   }
   .comment-created {
     font-size: 80%;
-    color: #119ac4;
+    color: #001aa5;
   }
   hr {
     width: 20%;
@@ -71,6 +72,7 @@
   list-style: none;
   text-align: center;
   font-weight: light;
+  color:  #001aa5;
   li {
     line-height: 180%;
   }
