--- a/app/views/main/_signed_out.erb
+++ b/app/views/main/_signed_out.erb
@@ -1,7 +1,7 @@
 <a class="login">Log In</a>
 <a class="reg">Register</a>
 <section class="clearfix">
-  <article class="one_third reg_form">
+  <article class="one_third reg_form" id="reg-form">
     <%= form_for @user, url: register_path, html: { class: "register-form" } do |f| %>
       <div>
         <%= f.label :email %>
@@ -18,7 +18,7 @@
   </article>
 </section>
 <section class="clearfix">
-  <article class="one_third login_form">
+  <article class="one_third login_form" id="login-form">
     <%= form_for @user, url: signin_path, html: { class: "signin-form" } do |f| %>
       <div>
         <%= f.label :email %>
