--- a/app/views/main/info.html.erb
+++ b/app/views/main/info.html.erb
@@ -3,5 +3,5 @@
   Ruby, Ruby on Rails, JavaScript, HTML5, CSS3/SCSS, Postgress, ActiveRecord, Agile and Test-Drive Development. <br/>
   I come from a photography & design background and I love the outdoors. <br/>
   I'm currently searching for employment as a Full Stack Developer. <br/>
-  Contact me at <%= mail_to "lucasmccomb@gmail.com" %>
+  Contact me at <%= mail_to "lucasmccomb@gmail.com", name = nil, html_options = { class: 'mail-to'} %>
 </p>
