--- a/app/assets/stylesheets/module/_typography.css.scss
+++ b/app/assets/stylesheets/module/_typography.css.scss
@@ -1,10 +1,11 @@
 .wrapper h1 {
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(0, 34, 209, 1.0);
   letter-spacing: auto;
   font-size: 700%;
   text-align: center;
   font-weight: 100;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
+  margin-top: 0;
   width: 100%;
   display: block;
 }
@@ -21,10 +22,10 @@
 }
 
 div.wrapper h3 {
-  color: #00b8ff;
+  color: #001aa5;
   letter-spacing: 2px;
   font-size: 100%;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.30);
+//  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.30);
   text-align: center;
   font-weight: 500;
   margin-right: auto;
@@ -37,24 +38,24 @@ div.wrapper h3 {
   color: #ffffff;
   font-size: 130%;
   line-height: 110%;
-  text-shadow: 2px 4px 2px rgba(255, 255, 255, 1.0);
+  text-shadow: 2px 4px 2px rgb(0, 38, 255);
 }
 
 a:link {
-  color: rgba(255, 55, 26, 0.90);
+  color: #FFFFFF;
   text-decoration: none;
   user-select: none;
 
 }
 
 a:visited {
-  color: rgba(255, 55, 26, 0.90);
+  color: #FFFFFF;
   text-decoration: none;
   user-select: none;
 }
 
 a:hover {
-  color: #ffffff;
+  color: white;
   text-decoration: none;
   @extend %text-shadow-cmy;
 }
@@ -67,33 +68,33 @@ a:hover {
 }
 
 .pinklink:visited {
-  color: rgb(255, 15, 174);
+  color: rgb(0, 26, 165);
   text-decoration: none;
   user-select: none;
 }
 
 .pinklink:hover {
-  color: #ffffff;
+  color: #001aa5;
   text-decoration: none;
   @extend %text-shadow-cmy;
 
 }
 
 .bluelink:link {
-  color: rgb(81, 169, 255);
+  color: rgb(0, 26, 165);
   text-decoration: none;
   user-select: none;
 
 }
 
 .bluelink:visited {
-  color: rgb(81, 169, 255);
+  color: rgb(0, 26, 165);
   text-decoration: none;
   user-select: none;
 }
 
 .bluelink:hover {
-  color: #ffffff;
+  color: #001aa5;
   text-decoration: none;
   @extend %text-shadow-cmy;
 }
@@ -103,7 +104,7 @@ h4 {
 }
 h5 {
   text-align: center;
-  color: rgba(24, 199, 255, 0.85);
+  color: rgba(0, 26, 165, 0.85);
 }
 
 .srchLukefolio h1 {
